--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
     padding: 30px;
     width: 90%;
     max-width: 700px;
+    margin-left: 200px;
 }
 
 #question {
@@ -105,4 +106,51 @@ body {
 
 #check:hover {
     background-color: #c0ca33;
+}
+
+
+/* Left Side Header */
+#left-header {
+    width: 150px;
+    background-color: #2c3e50;
+    color: white;
+    padding: 20px;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    overflow-y: auto;
+    z-index: 1000;
+}
+
+#logo h1 {
+    margin: 0;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 20px 0;
+}
+
+nav ul li {
+    margin: 15px 0;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    transition: color 0.3s;
+}
+
+nav ul li a:hover {
+   /* color: #1abc9c;*/
+    color:  #d4e157
 }
