--- a/style.css
+++ b/style.css
@@ -151,6 +151,34 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-   /* color: #1abc9c;*/
-    color:  #d4e157
+    color: #1abc9c;
+   /* color:  #d4e157*/
+}
+#questionId{
+     color: #1abc9c;
+    font-weight: bold;
+
+}
+#idBox{
+    width: 40px;
+    height: 40px;
+    background: #2c3e50;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+/* Change the selection color for all elements */
+::selection {
+    background-color: #ffcc00; /* Yellow background */
+    color: #000; /* Black text */
+}
+
+/* Optionally, you can target specific elements */
+p::selection {
+    background-color: #00ffcc; /* Teal background */
+    color: #fff; /* White text */
 }
